added update method of group chat
