# docs/swagger.json
@@ -605,6 +605,49 @@
                 }
             }
         },
+        "/updateGroupChat": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "updates group chat",
+                "operationId": "UpdateGroupChat",
+                "parameters": [
+                    {
+                        "description": "updated chat (если имя или описание не обновлялось, поле не слать вообще)",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/delivery.updateChatJson"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response-int"
+                        }
+                    },
+                    "400": {
+                        "description": "Person not authorized",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response-domain_Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response-domain_Error"
+                        }
+                    }
+                }
+            }
+        },
         "/updateProfileInfo": {
             "post": {
                 "consumes": [
@@ -809,6 +852,20 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "delivery.updateChatJson": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "integer"
+                },
+                "new_description": {
+                    "type": "string"
+                },
+                "new_name": {
                     "type": "string"
                 }
             }
